# HackYeah2023_KNML_TEAM_2_QUANTUM_ART

./: README.md  WorleyNoise.py  perlin.ipynb  pyproject.toml
.ipynb_checkpoints/: opensimplex-checkpoint.ipynb
notebooks/: julia_set.ipynb
src/: bubble_picture.py  julia_set.py  quantum_made_easy.py
