[tool.poetry]
name = "hackyeah2023"
version = "0.1.0"
description = ""
authors = ["Damian Kobyliński <damiankob12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.0.4"
qiskit = {extras = ["visualization"], version = "^0.44.1"}
qiskit-aer = "^0.12.2"
qiskit-ibm-runtime = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
